# q-sit-eval

./: README.md  pyproject.toml  qsit.py
results/: results.csv
