[project]
name = "q-sit-eval"
version = "0.1.0"
description = "Evaluating the q-sit model for rating image quality."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.5.2",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "transformers==4.45.0",
]
